fixed spacing on about page

--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -7,7 +7,7 @@
 }
 
 .about__content {
-    width: 75%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -15,7 +15,6 @@
 }
 
 .about__section {
-    /* padding-bottom: 100px; */
     display: flex;
     justify-content: center;
     text-align: center;
@@ -24,25 +23,24 @@
 
 .about__section-right {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 .about__section-left {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
 
 .about__title {
     margin: 0;
     font-size: 50px;
-    /* padding-bottom: 50px; */
     color: #a51c30;
 
 }
 
 .about__description {
     margin: 0;
-    width: 65%;
+    width: 50%;
     line-height: 1.5;
     color: rgba(0, 0, 0, 0.57);
 }
